turtleart.lessons.turtleart.Main.Polygon6.scala.error
Source:3: error: ':' expected but ')' found.
def poly(c) {
          ^Source:11: error: identifier expected but '}' found.
}
^