turtleart.lessons.turtleart.Main.Polygon6.scala.code
override def run() {
def poly(c) {
for ( k <- 0 to c-1) {
avance(80)
droite(360/c)
}

}
poly(6)
}
